[Code] [Network] Network Player Camera

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ Project Bunny/.vsconfig
 Project Bunny/UserSettings/EditorUserSettings.asset
 
 Project Bunny/ProjectSettings/EditorBuildSettings.asset
+
+Project Bunny/UserSettings/
