{ART}{ASSETS}UV UPDATES

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ Project Bunny/UserSettings/EditorUserSettings.asset
 Project Bunny/ProjectSettings/EditorBuildSettings.asset
 
 Project Bunny/UserSettings/
+*.psd
