--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Project Bunny/ProjectSettings/EditorBuildSettings.asset
 
 Project Bunny/UserSettings/
 *.psd
+Project Bunny/Assets/Art/UV & PNGs/Arena/Arena_Painted.psd.meta
