{ART}{ASSETS} Prefab updates

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Project Bunny/UserSettings/
 Project Bunny/Assets/Art/UV & PNGs/Arena/Arena_Painted.psd.meta
 Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
 Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
+Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
