--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Project Bunny/Assets/Art/UV & PNGs/Arena/Arena_Painted.psd.meta
 Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
 Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
 Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
+Project Bunny/Assets/Art/UV & PNGs/Classroom/Mad_Redos/ClassroomUVs.psd
